Fixed bug #47969 (ezmlm_hash() returns different values depend on OS)